--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-icons": "^4.10.1",
+    "react-parallax-tilt": "^1.7.301",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "typewriter-effect": "^2.22.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
