--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "pdfjs-dist": "^2.16.105",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^4.10.1",
     "react-parallax-tilt": "^1.7.301",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
     "typewriter-effect": "^2.22.0",
     "web-vitals": "^2.1.4"
   },
